PMforce/src/objects/Change_Request__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Change Requests</relationshipLabel>
        <relationshipName>Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_CR_Efforts_in_hrs__c</fullName>
        <label>Actual CR Efforts (in hrs)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_End_Date__c</fullName>
        <label>Actual End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Start_Date__c</fullName>
        <label>Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CR_Name__c</fullName>
        <label>CR Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Details__c</fullName>
        <label>Change Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Efforts_in_hrs__c</fullName>
        <label>Estimated Efforts (in hrs)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Resources_1__c</fullName>
        <label>Number of Resources 1</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Resources_2__c</fullName>
        <label>Number of Resources 2</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Resources_3__c</fullName>
        <label>Number of Resources 3</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_End_Date__c</fullName>
        <label>Planned End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Start_Date__c</fullName>
        <label>Planned Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProjectName__c</fullName>
        <formula>Project__r.Project_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProjectName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Change Requests</relationshipLabel>
        <relationshipName>Change_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <label>RecordType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_1__c</fullName>
        <label>Role 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Role</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role_2__c</fullName>
        <label>Role 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Role</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role_3__c</fullName>
        <label>Role 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Role</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Stage</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>manager_emial__c</fullName>
        <label>manager emial</label>
        <type>Email</type>
    </fields>
    <label>Change Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CR_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ProjectName__c</columns>
        <columns>Account__c</columns>
        <columns>Efforts_in_hrs__c</columns>
        <columns>Stage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CR Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Change Requests</pluralLabel>
    <recordTypes>
        <fullName>FP_CR</fullName>
        <active>true</active>
        <label>FP CR</label>
    </recordTypes>
    <recordTypes>
        <fullName>TM_CR</fullName>
        <active>true</active>
        <label>TM CR</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>